--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.15.7
+  provider: ^2.0.0+1
+  shrine_images: ^1.0.0
 
 dev_dependencies:
   flutter_test:
